# course-query-portal

./: README.md  index.html  vocabulary-generator.html
CRM學生快速打卡/: spec.md
CRM學生快速打卡/check-in-crm/: .env.example  .gitignore  DEPLOYMENT.md  README.md  main.py  pyproject.toml  render-build.sh  requirements.txt  start.sh
CRM學生快速打卡/check-in-crm/app/: __init__.py  db.py  gmail.py  routes.py  scheduler.py  scheduler_routes.py  schemas.py
CRM學生快速打卡/check-in-crm/prisma/: schema.prisma
CRM學生快速打卡/check-in-crm/templates/: dashboard.html  index.html  scheduler.html
TBCL/: tbcl_topics.json
course-query-portal/: README.md  index.html  package.json  vite.config.ts
course-query-portal/.github/workflows/: deploy.yml
course-query-portal/src/: App.tsx  index.css
course-query-portal/src/components/: AccessGate.tsx
course-query-portal/src/contexts/: AccessContext.tsx
course-query-portal/src/data/: mockCourses.ts
course-query-portal/src/pages/: AuthCode.tsx  EnglishWaiver.tsx  Guide.tsx  Home.tsx  Notices.tsx  Search.tsx
international-food-passport/: server.ts
word order/: guess_game.html  guess_game.py
